Fix spacing

--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -59,9 +59,6 @@ $has-toggle: ();
   h1, h2, h3, h4 {
     @include sans-serif;
   }
-  h2, h3, h4 {
-    @include mb(var(--paragraph-spacing-factor, 0));
-  }
   h1 {
     @include font-size-4\.5;
     font-weight: 300;
@@ -77,7 +74,7 @@ $has-toggle: ();
     @include font-size-2;
     font-weight: 400;
     @include mt(0.75);
-    @include mb(0.5);
+    @include mb(var(--paragraph-spacing-factor, 0));
   }
   p, blockquote, figcaption, aside, details, li {
     @include serif;
